# edit-distance-vector

./: .travis.yml  CHANGELOG.md  Data-Vector-Distance.html  README.md  build-docs.sh  doc-index.html  edit-distance-vector.cabal  edit-distance-vector.haddock  index-frames.html  index.html  mini_Data-Vector-Distance.html  stack.yaml
lib/Data/Vector/: Distance.hs
t/edit-distance-vector-1.0.0.2/: CHANGELOG.md  README.md  edit-distance-vector.cabal
t/edit-distance-vector-1.0.0.2/lib/Data/Vector/: Distance.hs
t/edit-distance-vector-1.0.0.2/test/: properties.hs  sample.hs
test/: properties.hs  sample.hs
