name:                edit-distance-vector
version:             0.1.0.0
synopsis:            Calculate edit distances and edit scripts between vectors.
description:         Calculate edit distances and edit scripts between vectors.
homepage:            https://github.com/thsutton/edit-distance-vector
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          me@thomas-sutton.id.au
copyright:           (c) 2015 Thomas Sutton and others.
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository    HEAD
  type:              git
  location:          https://github.com/thsutton/edit-distance-vector

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Data.Vector.Distance
  build-depends:
      base >=4.7 && <4.8
    , vector

test-suite             properties
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             properties.hs
  build-depends:     
      base
    , QuickCheck
    , edit-distance-vector
    , quickcheck-instances
    , vector
